--- a/Houses.ipynb
+++ b/Houses.ipynb
@@ -3056,7 +3056,7 @@
       "outputs": [],
       "source": [
         "preds_all = [model.predict(X_test) for model in models_fn]\n",
-        "preds = preds_all[0]*0.25 + preds_all[5]*0.75"
+        "preds = preds_all[5]"
       ]
     },
     {
